Fix title sizes on mobile

--- a/app/assets/stylesheets/components/_posts.sass
+++ b/app/assets/stylesheets/components/_posts.sass
@@ -63,6 +63,9 @@
       max-width: 100%
       margin: 2em auto
 
-@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max)
+@media (max-width: $screen-sm-max)
   .dbc-post > .inner > .cover-overlay
     width: 100%
+
+  .dbc-post .cover-overlay h1
+    font-size: 24px
