--- a/app/assets/stylesheets/components/_titles.sass
+++ b/app/assets/stylesheets/components/_titles.sass
@@ -14,3 +14,13 @@ h3 span
   font-weight: 100 !important
   letter-spacing: 2px
   @extend .text-muted
+
+@media (max-width: $screen-sm-max)
+  .block-title
+    text-align: left
+
+    h1
+      font-size: 1.6em
+
+      span
+        margin-top: 10px
